--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,66 @@
-dataclasses==0.8
-numpy==1.19.5
-pandas==1.1.5
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+cmake==3.26.1
+contourpy==1.0.7
+cycler==0.11.0
+datasets==2.11.0
+dill==0.3.6
+evaluate==0.4.0
+filelock==3.11.0
+fonttools==4.39.3
+frozenlist==1.3.3
+fsspec==2023.3.0
+huggingface-hub==0.13.4
+idna==3.4
+importlib-resources==5.12.0
+Jinja2==3.1.2
+kiwisolver==1.4.4
+lit==16.0.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mpmath==1.3.0
+multidict==6.0.4
+multiprocess==0.70.14
+networkx==3.1
+numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+packaging==23.0
+pandas==2.0.0
+Pillow==9.5.0
+pyarrow==11.0.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
+PyYAML==6.0
+regex==2023.3.23
+requests==2.28.2
+responses==0.18.0
 six==1.16.0
-torch==1.10.2
-typing-extensions==4.1.1
+sympy==1.11.1
+tokenizers==0.13.3
+torch==2.0.0
+torchdata==0.6.0
+torchtext==0.15.1
+tqdm==4.65.0
+transformers==4.27.4
+triton==2.0.0
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.15
+xxhash==3.2.0
+yarl==1.8.2
+zipp==3.15.0
